@@ -1,5 +1,8 @@
 
 6.47  2016-02-19
+  - Deprecated Mojo::Log::is_debug, Mojo::Log::is_error, Mojo::Log::is_info and
+    Mojo::Log::is_warn in favor of Mojo::Log::is_level.
+  - Added is_level method to Mojo::Log.
   - Fixed datetime_field helper to use the correct type attribute value.
 
 6.46  2016-02-13
